--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<div class="main-container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<h6 id="verification_subtext">We emailed you the six digit code to acciojob@email.com.Enter the code below to conform your email address.</h6>
+		<div class=code-container>
+			<input type="text" class="code" name="fBox" maxlength="1">
+			<input type="text" class="code" name="sBox" maxlength="1">
+			<input type="text" class="code" name="tBox" maxlength="1">
+			<input type="text" class="code" name="foBox" maxlength="1">
+			<input type="text" class="code" name="fiBox" maxlength="1">
+			<input type="text" class="code" name="sBox" maxlength="1">
+			
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
