--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 		<h1 id="verification_heading">Verify Your Account</h1>
 		<h6 id="verification_subtext">We emailed you the six digit code to acciojob@email.com.Enter the code below to conform your email address.</h6>
 		<div class=code-container>
-			<input type="text" class="code" name="fBox" maxlength="1">
-			<input type="text" class="code" name="sBox" maxlength="1">
-			<input type="text" class="code" name="tBox" maxlength="1">
-			<input type="text" class="code" name="foBox" maxlength="1">
-			<input type="text" class="code" name="fiBox" maxlength="1">
-			<input type="text" class="code" name="sBox" maxlength="1">
+			<input type="text" class="code"  id="code-1" name="fBox" maxlength="1">
+			<input type="text" class="code"  id="code-2"  name="sBox" maxlength="1">
+			<input type="text" class="code" id="code-3" name="tBox" maxlength="1">
+			<input type="text" class="code" id="code-4" name="foBox" maxlength="1">
+			<input type="text" class="code" id="code-5" name="fiBox" maxlength="1">
+			<input type="text" class="code" id="code-6" name="sBox" maxlength="1">
 			
 		</div>
 	</div>
